Fix customization tables on mobile

--- a/src/app/dashboard/gvars/gvar-list/gvar-list.component.css
+++ b/src/app/dashboard/gvars/gvar-list/gvar-list.component.css
@@ -24,7 +24,7 @@ td {
 }
 
 tr:nth-child(even) {
-  background: rgba(204, 204, 204, .15);
+  background: #545454;
 }
 
 
@@ -38,5 +38,5 @@ td.mat-cell, td.mat-footer-cell, th.mat-header-cell {
 
 
 th {
-  min-width: 120px;
+  min-width: 100px;
 }
